--- a/var/www/html/css/style.css
+++ b/var/www/html/css/style.css
@@ -130,7 +130,7 @@ body {
 	text-transform: uppercase;
 	line-height: 40px;
 	height: 40px;
-	-webkit-transition: top 0.2s, -webkit-transform 0.2s, color 0.2s,
+	transition: top 0.2s, -webkit-transform 0.2s, color 0.2s,
 		background-color 0.2s;
 	width: 230px;
 	margin: auto;
