--- a/gewaechshaus/client/css/style.css
+++ b/gewaechshaus/client/css/style.css
@@ -186,6 +186,7 @@ body {
 	border: 2px solid #364366;
 	border-radius: 25px;
 	padding: 10px;
+	transition: 1s;
 }
 
 .meter > span {
@@ -200,6 +201,7 @@ body {
 	background: linear-gradient(90deg, #ccfd47, #24fe41);
 	background-size: 400% 400%;
 	animation: gradientBG 5s ease infinite;
+	transition: 1s;
 }
 
 .fortschritt_rahmen {
@@ -208,6 +210,7 @@ body {
 	left: 0;
 	height: 150px;
 	width: 100%;
+	transition: 1s;
 }
 
 .fortschritt_balken {
@@ -232,4 +235,12 @@ body {
 	100% {
 		background-position: 0% 50%;
 	}
+}
+
+.text_fertig {
+	text-align: center;
+	position: relative;
+	display: none;
+	color: #364366;
+	font-family: Schrift_Bold;
 }
