--- a/gewaechshaus/client/css/style.css
+++ b/gewaechshaus/client/css/style.css
@@ -212,7 +212,6 @@ body {
 	position: relative;
 	margin-left: 10px;
 	margin-right: 10px;
-	margin-top: 50px;
 }
 
 .prozent_fortschritt {
@@ -254,9 +253,27 @@ body {
 
 .countdown {
 	position: absolute;
-	bottom: 35px;
+	bottom: 40px;
 	color: #364366;
 	font-family: Schrift_Bold;
 	left: 0px;
-	font-size: 13px;
+	font-size: 14px;
+}
+
+.parameter_datetime {
+	position: absolute;
+	top: 40px;
+	left: 0px;
+}
+
+.parameter_programm_ende {
+	position: absolute;
+	top: 40px;
+	right: 0px;
+}
+
+.datumzeit_anzeige {
+	color: #364366;
+	font-family: Schrift_Bold;
+	font-size: 14px;
 }
