--- a/gewaechshaus/client/css/style.css
+++ b/gewaechshaus/client/css/style.css
@@ -284,7 +284,7 @@ body {
 	width: 100px;
 	height: 50px;
 	max-width: 250px;
-	text-transform: uppercase;
+	font-family: Schrift_Bold;
 	border: 1px solid currentColor;
 	background-color: transparent;
 	transition: 0.4s;
