--- a/interface/css/einstellungen.css
+++ b/interface/css/einstellungen.css
@@ -121,7 +121,7 @@
 	bottom: 30px;
 	width: 100px;
 	height: 40px;
-	background-color: #36436600;
+	background-color: white;
 	border: 2px solid #364366;
 	border-radius: 5px;
 	outline: none;
