--- a/interface/css/betrieb.css
+++ b/interface/css/betrieb.css
@@ -7,8 +7,12 @@
 }
 
 #select-dropdown {
+	position: absolute;
 	color: white;
 	width: 250px;
+	top: 35px;
+	left: 50%;
+	transform: translateX(-50%);
 	font-family: Schrift_Bold;
 	font-size: 14px;
 	-webkit-touch-callout: none;
@@ -18,6 +22,7 @@
 	-ms-user-select: none;
 	user-select: none;
 	cursor: pointer;
+	z-index: 999;
 }
 
 .select {
@@ -25,17 +30,17 @@
 	text-align: center;
 	font-weight: bold;
 	text-transform: uppercase;
-	line-height: 40px;
-	height: 40px;
+	line-height: 45px;
+	height: 45px;
 	transition: top 0.2s, -webkit-transform 0.2s, color 0.2s,
 		background-color 0.2s;
 	width: 230px;
 	margin: auto;
 	box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
-
 	position: absolute;
 	left: 50%;
 	margin-left: -115px;
+	border-radius: 5px;
 }
 
 .select:last-child {
@@ -47,14 +52,132 @@
 	color: #fff;
 }
 
-.default {
-	transform: perspective(600px) rotateX(0deg);
-	z-index: 1000;
+.endzeit {
+	position: absolute;
+	bottom: 95px;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 380px;
 }
 
-.default:active {
-	transform: perspective(600px) rotateX(45deg);
-	perspective: 600px;
+.endzeit_text {
+	font-size: 15px;
+	font-family: Schrift_Bold;
+	color: #364366;
+}
+.datumwahl {
+	position: relative;
+	left: 10px;
+	text-align: center;
+	border: 2px solid #364366;
+	border-radius: 5px;
+	height: 35px;
+	font-size: 15px;
+	font-family: Schrift_Bold;
+	color: #364366;
+	width: 135px;
+}
+
+.datumwahl[type="date"]::-webkit-calendar-picker-indicator{
+	color: #364366;
+	opacity: 1 !important;
+}
+
+.datumwahl[type=date]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    display: none;
+}
+
+.zeitwahl {
+	position: absolute;
+	right: 0;
+	text-align: center;
+	border: 2px solid #364366;
+	border-radius: 5px;
+	height: 35px;
+	font-size: 15px;
+	font-family: Schrift_Bold;
+	color: #364366;
+	width: 95px;
+}
+
+.zeitwahl[type=time]::-webkit-inner-spin-button, 
+.zeitwahl[type=time]::-webkit-outer-spin-button { 
+    color: #364366;
+	opacity: 1 !important;
+	margin-top: 6px;
+	height: 20px;
+}
+
+.startbutton {
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	bottom: 23px;
+	width: 100px;
+	height: 40px;
+	background-color: white;
+	border: 2px solid #05c11e;
+	border-radius: 5px;
+	outline: none;
+	color: #05c11e;
+	font-size: 15px;
+	font-family: Schrift_Bold;
+}
+
+.slot_titel {
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	top: 115px;
+	width: 380px;
+	height: 35px;
+	font-size: 15px;
+	font-family: Schrift_Bold;
+	color: white;
+	background-color: #364366;
+	border: 2px solid #364366;
+	border-top-right-radius: 5px;
+	border-top-left-radius: 5px;
+	border-bottom: none;
+	display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.slot_parameter {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translateX(-50%) translateY(-90px);
+	width: 380px;
+	font-size: 15px;
+	font-family: Schrift_Bold;
+	color: #364366;
+	border: 2px solid #364366;
+	border-bottom-right-radius: 5px;
+	border-bottom-left-radius: 5px;
+}
+  
+.table_parameter td, .table_parameter th {
+	height: 35px;
+}
+
+.parameter_text {
+	width: 300px;
+	padding-left: 20px;
+}
+
+.parameter_wert {
+	width: 90px;
+	text-align: right;
+	padding-right: 20px;
+}
+  
+.table_parameter th {
+	text-align: center;
+	background-color: #364366;
+	color: white;
 }
 
 #error_div {
@@ -69,10 +192,10 @@
 }
 
 .meter {
-	height: 20px;
+	height: 25px;
 	position: relative;
-	border: 1px solid #364366;
-	padding: 5px;
+	border: 2px solid #364366;
+	padding: 0px;
 	transition: 0.5s;
 }
 
@@ -81,15 +204,13 @@
 	height: 100%;
 	position: relative;
 	overflow: hidden;
-	background: linear-gradient(90deg, #ccfd47, #24fe41);
-	background-size: 400% 400%;
-	animation: gradientBG 5s ease infinite;
+	background:#364366;
 	transition: 0.5s;
 }
 
 .fortschritt_rahmen {
 	position: absolute;
-	bottom: 100px;
+	bottom: 30px;
 	left: 0;
 	height: 100px;
 	width: 100%;
@@ -123,13 +244,15 @@
 	position: relative;
 	display: none;
 	font-family: Schrift_Bold;
+	top: 2px;
+	color: white;
 }
 
 .prozent_jetzt {
 	display: flex;
 	padding-right: 5px;
 	justify-content: flex-end;
-	color: #364366;
+	color: white;
 	font-family: Schrift_Bold;
 	font-size: 13px;
 	background-color: transparent;
@@ -165,22 +288,40 @@
 	font-size: 14px;
 }
 
-.button_primary {
-	display: block;
-	overflow: hidden;
-	width: 100px;
-	height: 50px;
-	max-width: 250px;
-	font-family: Schrift_Bold;
-	border: 1px solid currentColor;
-	background-color: transparent;
-	transition: 0.5s;
-}
-
 .button_abbrechen {
 	position: absolute;
-	bottom: 40px;
 	left: 50%;
 	transform: translateX(-50%);
+	bottom: 23px;
+	width: 100px;
+	height: 40px;
+	background-color: white;
+	border: 2px solid red;
+	border-radius: 5px;
+	outline: none;
 	color: red;
+	font-size: 15px;
+	font-family: Schrift_Bold;
+	z-index: 999;
+}
+
+.parameter_betriebswahl {
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	top: 30px;	
+	max-width: 500px;
+	height: 40px;
+	font-size: 20px;
+	font-family: Schrift_Bold;
+	color: #364366;
+}
+
+.parameter_betriebswahl td {
+	border: 1px solid white;
+	text-align: center;
+}
+
+.parameter_left {
+	text-align: left !important;
 }
