--- a/interface/css/betrieb.css
+++ b/interface/css/betrieb.css
@@ -78,14 +78,14 @@
 	width: 135px;
 }
 
-.datumwahl[type="date"]::-webkit-calendar-picker-indicator{
+.datumwahl[type="date"]::-webkit-calendar-picker-indicator {
 	color: #364366;
 	opacity: 1 !important;
 }
 
-.datumwahl[type=date]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    display: none;
+.datumwahl[type="date"]::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	display: none;
 }
 
 .zeitwahl {
@@ -101,9 +101,9 @@
 	width: 95px;
 }
 
-.zeitwahl[type=time]::-webkit-inner-spin-button, 
-.zeitwahl[type=time]::-webkit-outer-spin-button { 
-    color: #364366;
+.zeitwahl[type="time"]::-webkit-inner-spin-button,
+.zeitwahl[type="time"]::-webkit-outer-spin-button {
+	color: #364366;
 	opacity: 1 !important;
 	margin-top: 6px;
 	height: 20px;
@@ -141,8 +141,8 @@
 	border-top-left-radius: 5px;
 	border-bottom: none;
 	display: flex;
-    align-items: center;
-    justify-content: center;
+	align-items: center;
+	justify-content: center;
 }
 
 .slot_parameter {
@@ -158,8 +158,9 @@
 	border-bottom-right-radius: 5px;
 	border-bottom-left-radius: 5px;
 }
-  
-.table_parameter td, .table_parameter th {
+
+.table_parameter td,
+.table_parameter th {
 	height: 35px;
 }
 
@@ -173,7 +174,7 @@
 	text-align: right;
 	padding-right: 20px;
 }
-  
+
 .table_parameter th {
 	text-align: center;
 	background-color: #364366;
@@ -204,7 +205,7 @@
 	height: 100%;
 	position: relative;
 	overflow: hidden;
-	background:#364366;
+	background: #364366;
 	transition: 0.5s;
 }
 
@@ -309,7 +310,7 @@
 	position: absolute;
 	left: 50%;
 	transform: translateX(-50%);
-	top: 30px;	
+	top: 30px;
 	max-width: 500px;
 	height: 40px;
 	font-size: 20px;
