--- a/interface/css/betrieb.css
+++ b/interface/css/betrieb.css
@@ -48,7 +48,7 @@
 }
 
 .open .option:hover {
-	background-color: #4660a7;
+	background-color: #364366;
 	color: #fff;
 }
 
@@ -86,6 +86,22 @@
 .datumwahl[type="date"]::-webkit-inner-spin-button {
 	-webkit-appearance: none;
 	display: none;
+}
+
+.datumwahl[type="date"]::before {
+	color: #364366;
+	content: attr(placeholder);
+}
+.datumwahl[type="date"] {
+	color: #ffffff;
+}
+.datumwahl[type="date"]:focus,
+.datumwahl[type="date"]:valid {
+	color: #364366;
+}
+.datumwahl[type="date"]:focus::before,
+.datumwahl[type="date"]:valid::before {
+	content: "" !important;
 }
 
 .zeitwahl {
