--- a/interface/css/admin.css
+++ b/interface/css/admin.css
@@ -3,7 +3,11 @@
 	left: 0;
 	top: 0;
 	height: 100%;
+	display: flex;
 	width: 200px;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-evenly;
 }
 
 .button {
@@ -17,8 +21,6 @@
 	color: #364366;
 	font-size: 15px;
 	font-family: Schrift_Bold;
-	margin-top: 25px;
-	margin-left: 20px;
 }
 
 .fehlerlog_box {
