--- a/interface/css/admin.css
+++ b/interface/css/admin.css
@@ -1,8 +1,8 @@
 .button_box {
 	position: absolute;
-	left: 0;
+	left: 0px;
 	top: 0;
-	height: 100%;
+	height: 440px;
 	display: flex;
 	width: 200px;
 	flex-direction: column;
@@ -29,15 +29,46 @@
 	top: 0;
 	height: 440px;
 	width: 520px;
-	background-color: rgba(255, 0, 0, 0.089);
+}
+
+.meldungen {
+	position: absolute;
+	top: 60px;
+	left: 50%;
+	transform: translateX(-50%);
+	height: 353px;
+	width: 500px;
+	border: 2px solid #364366;
+	border-bottom-right-radius: 5px;
+	border-bottom-left-radius: 5px;
+}
+
+.meldungen-titel {
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	top: 23px;
+	width: 500px;
+	height: 35px;
+	font-size: 15px;
+	font-family: Schrift_Bold;
+	color: white;
+	background-color: #364366;
+	border: 2px solid #364366;
+	border-top-right-radius: 5px;
+	border-top-left-radius: 5px;
+	border-bottom: none;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .informationen_box {
 	position: absolute;
-	right: 80px;
+	left: 0;
 	bottom: 0;
 	height: 40px;
-	width: 520px;
+	width: 720px;
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
