--- a/interface/css/admin.css
+++ b/interface/css/admin.css
@@ -11,7 +11,6 @@
 }
 
 .button {
-	bottom: 23px;
 	width: 180px;
 	height: 45px;
 	background-color: white;
@@ -21,6 +20,19 @@
 	color: #364366;
 	font-size: 15px;
 	font-family: Schrift_Bold;
+}
+
+.aktor_button {
+	width: 200px;
+	height: 35px;
+	background-color: white;
+	border: 2px solid #364366;
+	border-radius: 5px;
+	outline: none;
+	color: #364366;
+	font-size: 10px;
+	font-family: Schrift_Bold;
+	margin: 2px;
 }
 
 .hmi_box {
