--- a/interface/css/admin.css
+++ b/interface/css/admin.css
@@ -23,8 +23,8 @@
 }
 
 .aktor_button {
-	width: 200px;
-	height: 35px;
+	width: 170px;
+	height: 30px;
 	background-color: white;
 	border: 2px solid #364366;
 	border-radius: 5px;
@@ -32,7 +32,6 @@
 	color: #364366;
 	font-size: 10px;
 	font-family: Schrift_Bold;
-	margin: 2px;
 }
 
 .hmi_box {
@@ -55,6 +54,13 @@
 	border-bottom-left-radius: 5px;
 	overflow-y: scroll;
 	overflow-x: hidden;
+}
+
+.aktorsteuerung {
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 
 .hmi::-webkit-scrollbar {
