--- a/interface/css/admin.css
+++ b/interface/css/admin.css
@@ -77,7 +77,7 @@
 
 .hmi a {
 	color: #364366;
-	font-size: 12px;
+	font-size: 11px;
 	font-family: Schrift_Bold;
 	padding: 5px;
 	display: inline-block;
@@ -143,4 +143,10 @@
 
 .systemuebersicht {
 	display: none;
+}
+
+.systemstatus {
+	height: 50%;
+	width: 100%;
+	overflow: hidden;
 }
