--- a/interface/css/admin.css
+++ b/interface/css/admin.css
@@ -7,18 +7,18 @@
 	width: 200px;
 	flex-direction: column;
 	align-items: center;
-	justify-content: space-evenly;
+	justify-content: space-around;
 }
 
 .button {
-	width: 180px;
-	height: 45px;
+	width: 140px;
+	height: 40px;
 	background-color: white;
 	border: 2px solid #364366;
 	border-radius: 5px;
 	outline: none;
 	color: #364366;
-	font-size: 15px;
+	font-size: 12px;
 	font-family: Schrift_Bold;
 }
 
