--- a/interface/css/admin.css
+++ b/interface/css/admin.css
@@ -7,7 +7,7 @@
 	width: 200px;
 	flex-direction: column;
 	align-items: center;
-	justify-content: space-around;
+	justify-content: space-evenly;
 }
 
 .button {
